...
          'no_active_orders': 'No Active Orders',
          'no_previous_orders': 'No Previous Orders',
          'settings': 'Settings',
          'phone_number': 'Phone Number',
          'add_id_photo': 'Add ID Photo',
          'face_scan': 'Face Scan',
          'continue': 'Continue',
          'skip': 'Skip',
          'create_account': 'Create Account',
          'login': 'Login',
          'sign_in': 'Sign In',
          'sign_up': 'Sign Up',
          'forgot_password': 'Forgot Password',
...
